[project]
name = "flask-sample"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "line-bot-sdk>=3.14.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_sample"]
